refactor: TestFixture 적용